src/objects/TBDAnalytics_Sales_History__c.object
<CustomObject>
    <description>A copy of the Sales History object without relations to other objects. Used for pulling Sales information to Wave without reaching limits</description>
    <fields>
        <fullName>ATLANTIS_Interface__c</fullName>
        <label>ATLANTIS Interface</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATL_Abut_Implant_Manufacturer_Grouped__c</fullName>
        <formula>CASE(  Implant_system__c , 
&quot;BioHorizons&quot;, &quot;Comp System&quot;, 
&quot;Biomet 3i&quot;, &quot;Comp System&quot;, 
&quot;Camlog&quot;, &quot;Comp System&quot;, 
&quot;Keystone Dental&quot;, &quot;Comp System&quot;, 
&quot;Nobel Biocare&quot;, &quot;Comp System&quot;, 
&quot;Straumann&quot;, &quot;Comp System&quot;, 
&quot;Sybron Implant Solutions&quot;, &quot;Comp System&quot;, 
&quot;Zimmer Dental&quot;, &quot;Comp System&quot;, 
&quot;Ankylos (D)&quot;, &quot;DI System&quot;, 
&quot;Astra Tech (D)&quot;, &quot;DI System&quot;, 
&quot;XiVE/Frialit (D)&quot;, &quot;DI System&quot;, 
 &quot;N/A&quot; 
)</formula>
        <label>ATL Abut Implant Manufacturer Grouped</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATL_Scanner_Brand__c</fullName>
        <label>ATL Scanner Brand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWO_Case_No__c</fullName>
        <formula>IF(AND(BEGINS( Product_Group_HQ__c , &quot;ID2&quot;) ,NOT( ISNULL( Order_Number__c ) )) , MID( Order_Number__c , 4, LEN( Order_Number__c ) -3) , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AWO Case No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWO_Link__c</fullName>
        <formula>IF( ISNUMBER( Our_Reference__c ), HYPERLINK(&quot;https://www.atlantisweborder.com/orders/show/&quot;&amp; Our_Reference__c, AWO_Case_No__c ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AWO Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Account_No__c</fullName>
        <label>ERP Number From Integration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adress_Number__c</fullName>
        <label>Adress Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <formula>CASE (Country_Code__c, &quot;US&quot;, &quot;North America&quot;, &quot;CA&quot;, &quot;North America&quot;, &quot;AU&quot;, &quot;Asia/Pacific&quot;, &quot;NZ&quot; , &quot;Asia/Pacific&quot;, &quot;JP&quot;, &quot;Asia/Pacific&quot;, &quot;Europe&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Voucher__c</fullName>
        <label>Contract/Voucher ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>LEFT( Account_Account_No__c , 2)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Number__c</fullName>
        <label>Customer Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Model__c</fullName>
        <label>Discount Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalSKU_From_Source_HQ__c</fullName>
        <label>GlobalSKU From Source (HQ)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guide_Payment_Method_HQ__c</fullName>
        <label>Guide Payment Method (HQ)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_system__c</fullName>
        <label>ATL Implant Manufacturer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_based_scanning__c</fullName>
        <formula>IF ( CONTAINS(Name, &quot;S&quot;), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATL Lab-based scanning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maintenance_Expiry_Date__c</fullName>
        <label>Maintenance Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Reference__c</fullName>
        <label>Our Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_ERP_D_JP__c</fullName>
        <label>Payer ERP # (D-JP)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_ID__c</fullName>
        <label>Payer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Code_D_JP__c</fullName>
        <label>Price List Code (D-JP)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Description_D_JP__c</fullName>
        <label>Price List Description (D-JP)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Sales</fullName>
                </value>
                <value>
                    <fullName>SASAKI</fullName>
                </value>
                <value>
                    <fullName>Other Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <label>Product Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_2__c</fullName>
        <label>Product Group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_3__c</fullName>
        <label>Product Group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_HQ__c</fullName>
        <label>Product Group 4 Code (HQ)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Element__c</fullName>
        <label>Project Element</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Contract_External_ID__c</fullName>
        <label>Purchasing Contract External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>SBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Guide_Type__c</fullName>
        <label>SIMPLANT Guide Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Attribute_1__c</fullName>
        <label>Sales Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Attribute_2__c</fullName>
        <label>Sales Attribute 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Attribute_3__c</fullName>
        <label>Sales Attribute 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_History_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sales History External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Owner_Salesman_ID_HQ__c</fullName>
        <label>Sales Owner Salesman ID (HQ)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>IF( Quantity__c =0, Price__c , Price__c * Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>IF( Quantity__c =0, Price__c , Price__c * Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Dealer Sell-out Data</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unearned_Revenue__c</fullName>
        <label>Unearned Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <label>Universal Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <formula>CASE(Implant_system__c, 
 &quot;BioHorizons&quot;, &quot;Comp System&quot;, 
 &quot;Biomet 3i&quot;, &quot;Comp System&quot;, 
 &quot;Camlog&quot;, &quot;Comp System&quot;, 
 &quot;Keystone Dental&quot;, &quot;Comp System&quot;, 
 &quot;Nobel Biocare&quot;, &quot;Comp System&quot;, 
 &quot;Straumann&quot;, &quot;Comp System&quot;, 
 &quot;Sybron Implant Solutions&quot;, &quot;Comp System&quot;, 
 &quot;Zimmer Dental&quot;, &quot;Comp System&quot;, 
 &quot;Ankylos (D)&quot;, &quot;DI System&quot;, 
 &quot;Astra Tech (D)&quot;, &quot;DI System&quot;, 
 &quot;XiVE/Frialit (D)&quot;, &quot;DI System&quot;, 
 &quot;N/A&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ATL Implant Use Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Expiry_Date__c</fullName>
        <label>Voucher Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Validity__c</fullName>
        <label>Voucher Validity</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>TBD Analytics Sales History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Analytics Sales History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TBD Analytics Sales History</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>